# TinySDL

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  build.sh  install.sh  run.bat  run.sh  vcpkg.json
.github/workflows/: main.yml
tinysdl/: CMakeLists.txt
tinysdl/App/: CMakeLists.txt
tinysdl/App/tinyRenderer/: CMakeLists.txt
tinysdl/Game/: CMakeLists.txt
tinysdl/Game/Brickout/: Game.cpp  Game.hpp
tinysdl/Game/Pong/: CMakeLists.txt  main.cpp  main.hpp
tinysdl/Game/Tetris/: App.cpp  App.hpp  Block.cpp  Block.hpp  BlockShader.cpp  BlockShader.hpp  CMakeLists.txt  GameObject.cpp  GameObject.hpp  Log.cpp  Log.hpp  OpenGLRenderer.h  Render.cpp  Render.hpp  ResourceManager.cpp  ResourceManager.hpp  Shader.cpp  Shader.h  Shader.hpp  ShaderManager.hpp  Singleton.hpp  main.cpp  main.hpp
tinysdl/resources/data/: data.json  data.json.bak
tinysdl/shaders/: blockShader.json
tinysdl/src/: GameObject.cpp  GameObject.hpp  Window.cpp  Window.hpp  main.cpp  main.hpp
